# D3D7Triangle

./: .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  llvm-mingw.cmake  main.cpp  shaders.hlsl  xube.h
.github/workflows/: CI.yml
